# template-python-django

./: .gitpod.yml  pyproject.toml
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/images/: background.gif:Zone.Identifier
polls/templates/polls/: index.html
templates/: index.html
