[tool.poetry]
name = "template-python-django"
version = "0.1.0"
description = ""
authors = ["abist_kobayashi <hi_kobayashi@abist.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
